--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Tue, 12 Jan 2021 07:37:59 GMT
+// Generated on Tue, 12 Jan 2021 08:47:55 GMT
 
 $light-color-primary-lighter: #57A4D7;
 $light-color-primary-default: #338FCC;
@@ -400,16 +400,16 @@ $checkbox-size-width: 16px;
 $checkbox-size-padding: 24px;
 $checkbox-size-border-width: 1px;
 $checkbox-size-toggle-box-shadow: inset 0 0 1px 0 rgba(0, 0, 0, 0.2);
-$popup-common-light-color-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
-$popup-common-light-color-border: #B3B3B3;
-$popup-common-light-color-divider: #CCCCCC;
-$popup-common-light-color-background: white;
-$popup-common-light-color-footer-background: #F0F0F0;
-$popup-common-dark-color-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
-$popup-common-dark-color-border: #999999;
-$popup-common-dark-color-divider: #666666;
-$popup-common-dark-color-background: #4D4D4D;
-$popup-common-dark-color-footer-background: transparent;
+$popup-light-color-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
+$popup-light-color-border: #B3B3B3;
+$popup-light-color-divider: #CCCCCC;
+$popup-light-color-background: white;
+$popup-light-color-footer-background: #F0F0F0;
+$popup-dark-color-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
+$popup-dark-color-border: #999999;
+$popup-dark-color-divider: #666666;
+$popup-dark-color-background: #4D4D4D;
+$popup-dark-color-footer-background: transparent;
 $datepicker-toggle-size-width: 30px;
 $datepicker-toggle-size-height: 30px;
 $datepicker-body-size-label-padding-side: 33% / 7;
