--- a/packages/mosaic/input/_input-theme.scss
+++ b/packages/mosaic/input/_input-theme.scss
@@ -3,18 +3,18 @@
 
 @mixin mc-input-theme($theme) {
     .mc-input {
-        color: $color-foreground-text;
+        color: map-get($foreground, text);
 
         &::placeholder {
-            color: $color-foreground-text-disabled;
+            color: map-get($foreground, text-disabled);
         }
 
         &::-ms-input-placeholder {
-            color: $color-foreground-text-disabled;
+            color: map-get($foreground, text-disabled);
         }
 
         &::-webkit-input-placeholder {
-            color: $color-foreground-text-disabled;
+            color: map-get($foreground, text-disabled);
         }
     }
 }
