--- a/packages/mosaic/table/_table-theme.scss
+++ b/packages/mosaic/table/_table-theme.scss
@@ -14,12 +14,12 @@
         & > tbody {
             & > tr {
                 &:hover {
-                    background-color: $color-background-overlay-hovered;
+                    background-color: map-get($background, overlay-hovered);
                 }
 
                 & > th,
                 & > td {
-                    color: $color-foreground-text;
+                    color: map-get($foreground, text);
                 }
             }
         }
