--- a/packages/mosaic/tree/_tree-theme.scss
+++ b/packages/mosaic/tree/_tree-theme.scss
@@ -8,14 +8,14 @@
     }
 
     .mc-tree-option {
-        color: $color-foreground-text;
+        color: map-get($foreground, text);
 
         &:hover {
-            background-color: $color-background-overlay-hovered;
+            background-color: map-get($background, overlay-hovered);
         }
 
         &.mc-focused {
-            border-color: $globals-states-focused-color;
+            border-color: map-get(map-get($theme, states), focused-color);
         }
 
         &.mc-selected {
@@ -25,7 +25,7 @@
         &[disabled] {
             background-color: transparent;
 
-            color: $color-foreground-text-disabled;
+            color: map-get($foreground, text-disabled);
         }
     }
 }
