--- a/packages/mosaic/sidepanel/_sidepanel-theme.scss
+++ b/packages/mosaic/sidepanel/_sidepanel-theme.scss
@@ -3,53 +3,50 @@
 
 
 @mixin mc-sidepanel-theme($theme) {
+    $background: map-get($theme, background);
+
+    $sidepanel: map-get(map-get($theme, components), sidepanel);
+    $popup: map-get(map-get($theme, components), popup);
+
     $is-dark: map-get($theme, is-dark);
 
     .mc-sidepanel-content {
-        background-color: $color-background-background;
+        background-color: map-get($background, background);
     }
 
     .mc-sidepanel-container_shadowed {
         &.mc-sidepanel-container_right {
             .mc-sidepanel-content {
-                box-shadow:
-                    0 0 0 1px $sidepanel-color-border,
-                    -6px 0 12px 0 rgba(0, 0, 0, 0.24);
+                box-shadow: 0 0 0 1px map-get($sidepanel, border), -6px 0 12px 0 rgba(0, 0, 0, 0.24);
             }
         }
 
         &.mc-sidepanel-container_left {
             .mc-sidepanel-content {
-                box-shadow:
-                    0 0 0 1px $sidepanel-color-border,
-                    6px 0 12px 0 rgba(0, 0, 0, 0.24);
+                box-shadow: 0 0 0 1px map-get($sidepanel, border), 6px 0 12px 0 rgba(0, 0, 0, 0.24);
             }
         }
 
         &.mc-sidepanel-container_bottom {
             .mc-sidepanel-content {
-                box-shadow:
-                    0 0 0 1px $sidepanel-color-border,
-                    0 -6px 12px 0 rgba(0, 0, 0, 0.24);
+                box-shadow: 0 0 0 1px map-get($sidepanel, border), 0 -6px 12px 0 rgba(0, 0, 0, 0.24);
             }
         }
 
         &.mc-sidepanel-container_top {
             .mc-sidepanel-content {
-                box-shadow:
-                    0 0 0 1px $sidepanel-color-border,
-                    0 6px 12px 0 rgba(0, 0, 0, 0.24);
+                box-shadow: 0 0 0 1px map-get($sidepanel, border), 0 6px 12px 0 rgba(0, 0, 0, 0.24);
             }
         }
     }
 
     .mc-sidepanel-header {
-        border-bottom: 1px solid $popup-common-color-divider-color;
+        border-bottom: 1px solid map-get($popup, divider);
     }
 
     .mc-sidepanel-footer {
-        border-top: 1px solid  if($is-dark, $popup-common-color-divider-color, transparent);
-        background-color: $popup-common-color-footer-background;
+        border-top: 1px solid  if($is-dark, map-get($popup, divider), transparent);
+        background-color: map-get($popup, footer-background);
     }
 }
 
