--- a/packages/mosaic/table/table.scss
+++ b/packages/mosaic/table/table.scss
@@ -11,10 +11,10 @@
             & > th,
             & > td {
                 padding: {
-                    top: $table-color-row-padding-vertical;
-                    right: ($table-color-row-padding-horizontal / 2);
-                    bottom: ($table-color-row-padding-vertical - $table-color-border-width);
-                    left: ($table-color-row-padding-horizontal / 2)
+                    top: $table-size-row-padding-vertical;
+                    right: ($table-size-row-padding-horizontal / 2);
+                    bottom: ($table-size-row-padding-vertical - $table-size-border-width);
+                    left: ($table-size-row-padding-horizontal / 2)
                 };
 
                 vertical-align: baseline;
@@ -23,12 +23,12 @@
 
             & > th:first-child,
             & > td:first-child {
-                padding-left: $table-color-row-padding-horizontal;
+                padding-left: $table-size-row-padding-horizontal;
             }
 
             & > th:last-child,
             & > td:last-child {
-                padding-right: $table-color-row-padding-horizontal;
+                padding-right: $table-size-row-padding-horizontal;
             }
         }
     }
@@ -37,18 +37,18 @@
     & > thead {
         & > tr > th {
             padding: {
-                top: $table-color-row-padding-vertical;
-                bottom: ($table-color-row-padding-vertical - $table-color-border-width);
+                top: $table-size-row-padding-vertical;
+                bottom: ($table-size-row-padding-vertical - $table-size-border-width);
             }
 
-            border-bottom: $table-color-border-width solid transparent;
+            border-bottom: $table-size-border-width solid transparent;
         }
     }
 
     & > tbody > tr {
         & th,
         & td {
-            border-bottom: $table-color-border-width solid transparent;
+            border-bottom: $table-size-border-width solid transparent;
         }
     }
     /* stylelint-enable no-descending-specificity */
